[tool.poetry]
name = "exporter"
version = "0.1.0"
description = ""
authors = ["Maksprots <makslive@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.18"
typer = "^0.15.2"
aiortc = "^1.11.0"
ruff = "^0.11.6"
websockets = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
